<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>rosaria</name>
  <version>0.0.0</version>
  <description>
    The <tt>RosAria</tt>
    <tt>RosAria</tt>
  </description>
  <author>Srećko Jurić-Kavelj</author>
  <maintainer email="srecko.juric-kavelj@fer.hr">Srećko Jurić-Kavelj</maintainer>
  <maintainer email="ivan.markovic@fer.hr">Ivan Marković</maintainer>
  <maintainer email="reed.hedges@aedpt.com">Reed Hedges</maintainer>
  <license>GPLv2</license>
  <url type="website">http://www.ros.org/wiki/ROSARIA</url>
  <url type="bugtracker">https://github.com/amor-ros-pkg/rosaria/issues</url>
  
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  
  <depend>rclcpp</depend>
  <depend>libaria</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  	
 
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
